Redesigned user profile page so information was horizontally aligned. Edit button is causing issues due to it being within the form (same issues as on every other form). Might need to reconsider design.

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -1014,7 +1014,6 @@ button.image-button:hover {
 }
 
 #user_div div {
-    display: flex;
     justify-content: center;
     align-items: center;
 }
